--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-flask
-gunicorn
-tchan
-requests
-gspread
-oauth2client
+Flask==2.0.2
+requests==2.26.0
+beautifulsoup4==4.10.0
+APScheduler==3.7.0
+oauth2client==4.1.3
