--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Flask==2.0.2
-requests==2.26.0
-beautifulsoup4==4.10.0
-APScheduler==3.7.0
-oauth2client==4.1.3
+requests
+APScheduler
+beautifulsoup4
+Flask
+gunicorn
+oauth2client
+gspread
+python-telegram-bot
